[metadata]
name = exp_selection
version = 1.1.0
author = Edvard Ehler, Ondřej Moravčík
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bioinfocz/exp_heatmap
project_urls =
    Bug Tracker = https://github.com/bioinfocz/exp_heatmap/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
  scikit-allel
  zarr
  argparse
  numpy
  pandas
  matplotlib
  seaborn

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    exp_selection = exp_selection.cli:main
